--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           <p>Currently crafting next-generation web applications while exploring the intersection of code and visual art.</p>
         </div>
         <div class="social-links">
-          <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/GodsOfSaturn" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" target="_blank"><i class="fab fa-github"></i></a>
           <a href="#"><i class="fas fa-envelope"></i></a>
